--- a/Hierarchy/Hierarchy.vcxproj
+++ b/Hierarchy/Hierarchy.vcxproj
@@ -88,6 +88,7 @@
   <ItemGroup>
     <ClCompile Include="Aeroplane.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="HeightMap.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -98,6 +99,7 @@
   <ItemGroup>
     <ClInclude Include="Aeroplane.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="HeightMap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
