--- a/Hierarchy/Hierarchy.vcxproj
+++ b/Hierarchy/Hierarchy.vcxproj
@@ -90,6 +90,9 @@
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="HeightMap.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="NodeT.cpp" />
+    <ClCompile Include="Robot.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shared\Shared.vcxproj">
@@ -101,6 +104,12 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="HeightMap.h" />
+    <ClInclude Include="Node.h" />
+    <ClInclude Include="NodeT.h" />
+    <ClInclude Include="Robot.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="RobotData.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
